--- a/styles/main.css
+++ b/styles/main.css
@@ -207,7 +207,6 @@ header {
 .candidate-info {
   padding: 0px;
   margin: 11px 0px 0px;
-  width: 100%;
   height: 45px;
   font: 20px "OpenSans";
   line-height: 2.25;
@@ -218,7 +217,6 @@ header {
 .candidate-description {
   padding: 0px;
   margin: 0px;
-  width: 100%;
   font: "OpenSans";
   line-height: 1.5;
   text-align: center;
@@ -306,3 +304,32 @@ ul {
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
 }
+
+/* MEDIAQUERY ADALABERS*/
+
+@media all and (min-width: 768px) and (max-width: 1200px) {
+  .imagen-about {
+    width: 12.813rem;
+    height: 12.813rem;
+  }
+  .candidate {
+    margin-bottom: 3.75rem;
+  }
+
+  /* CANDIDATAS A LA IZQUIERDA */
+
+  .candidate:nth-child(even) {
+    background: pink;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .candidate:nth-child(odd) {
+    background: coral;
+    align-items: flex-end;
+    text-align: right;
+  }
+
+  .candidate-description {
+    text-align: left;
+  }
