--- a/_src/templates/partials/_go-about.html
+++ b/_src/templates/partials/_go-about.html
@@ -11,10 +11,8 @@
 
 				<p class="candidate-description">
 					Gracias a mi anterior trabajo como analista de datos, cuento con
-					experiencia en el trato directo con el cliente, gran capacidad para el
-					trabajo en equipo, una buena dosis de paciencia y una forma de
-					trabajar resolutiva. Mi motivación personal es emprender mi camino en
-					el sector digital y poder comenzar mi carrera profesional como
+					experiencia en el trato directo con el cliente, gran capacidad para el trabajo en equipo y una buena dosis de paciencia.
+					Mi motivación personal es emprender mi camino en el sector digital y poder comenzar mi carrera profesional como
 					desarrolladora Front-end.
 				</p>
 
