change language from Spanish to English classes and nesting in SCSS

--- a/_src/templates/partials/_go-about.html
+++ b/_src/templates/partials/_go-about.html
@@ -1,8 +1,8 @@
 
 		<section id="go_about" class="go-about style-box">
-			<h1 class="container-titulo-about">QUIÉNES SOMOS</h1>
+			<h1 class="title-about">QUIÉNES SOMOS</h1>
 			<div class="candidate">
-				<img class="imagen-about container-imagen-about" src=./assets/images/Sara.jpg alt="Imagen candidata" />
+				<img class="image-about" src=./assets/images/Sara.jpg alt="Foto de Sara Martín" title="Sara Martín" />
 				
 				<div class="candidate-info-container">
 				<h3 class="candidate-info">
@@ -16,7 +16,7 @@
 					desarrolladora Front-end.
 				</p>
 
-				<ul class="container-simbolos-about">
+				<ul class="container-icons-about">
 					<a href="https://twitter.com/Sara_Mgara?s=09" target="_blank">
 						<li>
 							<i style="text-decoration: none;" class="fab fa-twitter"></i>
@@ -46,7 +46,7 @@
 		</div>
 
 			<div class="candidate">
-				<img class="imagen-about" src=./assets/images/Patricia.jpg alt="Imagen candidata" />
+				<img class="image-about" src=./assets/images/Patricia.jpg alt="Foto de Patricia Martínez" title="Patricia Martínez" />
 
 				<div class="candidate-info-container">
 				<h3 class="candidate-info">
@@ -60,7 +60,7 @@
 					la creatividad y el sentido del humor.
 				</p>
 
-				<ul class="container-simbolos-about">
+				<ul class="container-icons-about">
 					<a href="https://twitter.com/includepatricia" target="_blank">
 						<li>
 							<i class="fab fa-twitter"></i>
@@ -90,7 +90,7 @@
 					
 
 			<div class="candidate">
-				<img class="imagen-about" src=./assets/images/Jesica.jpg alt="Imagen candidata" />
+				<img class="image-about" src=./assets/images/Jesica.jpg alt="Imagen candidata" />
 
 				<div class="candidate-info-container">
 				<h3 class="candidate-info">
@@ -104,7 +104,7 @@
 					misterios de la programación.
 				</p>
 
-				<ul class="container-simbolos-about">
+				<ul class="container-icons-about">
 					<a href="https://twitter.com/ouuhjems" target="_blank">
 						<li>
 							<i class="fab fa-twitter"></i>
@@ -133,7 +133,7 @@
 			</div>
 
 			<div class="candidate">
-				<img class="imagen-about" src=./assets/images/Bea.jpg alt="Imagen candidata" />
+				<img class="image-about" src=./assets/images/Bea.jpg alt="Imagen de Beatriz León" title="Beatriz León" />
 
 				<div class="candidate-info-container">
 				<h3 class="candidate-info">
@@ -148,7 +148,7 @@
 					servicio de proyectos innovadores y sostenibles.
 				</p>
 
-				<ul class="container-simbolos-about">
+				<ul class="container-icons-about">
 					<a href="https://twitter.com/mariedouceur" target="_blank">
 						<li>
 							<i class="fab fa-twitter"></i>
@@ -177,7 +177,7 @@
 	</div>
 
 			<div class="candidate">
-				<img class="imagen-about" src=./assets/images/Raquel.jpg alt="Imagen candidata" />
+				<img class="image-about" src=./assets/images/Raquel.jpg alt="Imagen candidata" />
 
 				<div class="candidate-info-container">
 				<h3 class="candidate-info">
@@ -192,7 +192,7 @@
 					objetivos trazados por la empresa.
 				</p>
 
-				<ul class="container-simbolos-about">
+				<ul class="container-icons-about">
 					<a href="https://twitter.com/Erargami" target="_blank">
 						<li>
 							<i class="fab fa-twitter"></i>
