--- a/_src/assets/scss/core/_go-about.scss
+++ b/_src/assets/scss/core/_go-about.scss
@@ -1,3 +1,77 @@
+.go-about {
+  display: flex;
+  height: min-content;
+  position: relative;
+  top: 60px;
+}
+.title-about {
+  width: 100%;
+  height: 45px;
+  margin: 30px 0px 26px;
+  font-family: Rubik;
+  font-size: 24px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.88;
+  letter-spacing: normal;
+  text-align: center;
+  color: #099d8d;
+}
+/*imagen*/
+.container-imagen-about {
+  text-align: center;
+}
+.image-about {
+  width: 180px;
+  height: 180px;
+  border-radius: 4px;
+  border: solid 5px rgba(0, 0, 0, 0.08);
+}
+
+/*nombre*/
+.candidate {
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 15px;
+  text-align: center;
+}
+
+.candidate-info {
+  padding: 0px;
+  margin: 11px 0px 0px;
+  height: 45px;
+  font: 20px "OpenSans";
+  line-height: 2.25;
+  color: #000000;
+}
+/*descripcion*/
+.candidate-description {
+  width: 18.125rem;
+  height: 12.5rem;
+  padding: 0px;
+  margin: 0px;
+  font: "OpenSans";
+  line-height: 1.5;
+  color: #54585a;
+}
+/*iconos*/
+.container-icons-about {
+  margin: 15px 0 41px;
+  padding: 0px;
+  list-style: none;
+  color: #099d8d;
+  width: 7.75rem;
+  height: 1.875rem;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
 /* MEDIAQUERY ADALABERS*/
 
 @media all and (min-width: 768px) and (max-width: 1200px) {
@@ -29,7 +103,7 @@
       flex-direction: row-reverse;
       text-align: right;
     }
-    .imagen-about {
+    .image-about {
       width: 12.813rem;
       height: 12.813rem;
     }
@@ -71,7 +145,7 @@
       flex-direction: row-reverse;
       text-align: right;
     }
-    .imagen-about {
+    .image-about {
       width: 17.375rem;
       height: 17.375rem;
     }
