--- a/_src/assets/scss/core/main.scss
+++ b/_src/assets/scss/core/main.scss
@@ -13,16 +13,6 @@ html {
   /* background-color: blueviolet; */
 }
 
-.candidate {
-  width: 100%;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 15px;
-  text-align: center;
-}
-
 header {
   width: 100%;
   height: 3.75rem;
@@ -68,13 +58,6 @@ header {
 
 .go-team {
   display: block;
-  position: relative;
-  top: 60px;
-}
-
-.go-about {
-  display: flex;
-  height: min-content;
   position: relative;
   top: 60px;
 }
@@ -179,67 +162,6 @@ header {
 
 /* CAMBIAR CSS DESDE AQUÍ*/
 
-/*h1*/
-.container-titulo-about {
-  width: 100%;
-  height: 45px;
-  margin: 30px 0px 26px;
-  font-family: Rubik;
-  font-size: 24px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.88;
-  letter-spacing: normal;
-  text-align: center;
-  color: #099d8d;
-}
-/*imagen*/
-.container-imagen-about {
-  text-align: center;
-}
-.imagen-about {
-  width: 180px;
-  height: 180px;
-  border-radius: 4px;
-  border: solid 5px rgba(0, 0, 0, 0.08);
-}
-
-/*nombre*/
-.candidate-info {
-  padding: 0px;
-  margin: 11px 0px 0px;
-  height: 45px;
-  font: 20px "OpenSans";
-  line-height: 2.25;
-  color: #000000;
-}
-/*descripcion*/
-.candidate-description {
-  width: 18.125rem;
-  height: 12.5rem;
-  padding: 0px;
-  margin: 0px;
-  font: "OpenSans";
-  line-height: 1.5;
-  color: #54585a;
-}
-/*iconos*/
-.container-simbolos-about {
-  margin: 15px 0 41px;
-  padding: 0px;
-  list-style: none;
-  color: #099d8d;
-  width: 7.75rem;
-  height: 1.875rem;
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: space-between;
-  list-style-type: none;
-}
-
-/*CAMBIAR CSS HASTA AQUÍ*/
-
 i {
   color: #099d8d;
 }
@@ -306,4 +228,4 @@ ul {
   font-family: "Open Sans", sans-serif;
 }
 
-@import "_go-about";
+@import "_go-about.scss";
