--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -21,7 +21,7 @@
   <body>
     <partial src="_header.html" label="header"></partial>
     <partial src="_go-team.html" label="_go-team"></partial>
-    <partial src="_go-about.html" label="go-about"></partial>
+    <partial src="_go-about.html" label="_go-about"></partial>
     <partial src="_footer.html" label="footer"></partial>
   </body>
 </html>
