--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,22 +1,24 @@
 <footer>
+  <hr class="mark" noshade size="1px" ; />
   <div class="footer">
-    <hr class="mark" noshade size="1px" ; />
-    <p class="copyright-footer">The Cool Coders © 2020</p>
+    <p class="copyright-footer">The cool coders © 2020</p>
     <nav class="nav-footer">
       <ul>
-        <li class="list-footer">
-          <a class="links-footer" href="#go_team">EQUIPO</a>
+        <li>
+          <a class="links-footer" href="#go_team">Equipo</a>
         </li>
-        <li class="list-footer">
-          <a class="links-footer" href="#go_about">QUIÉNES SOMOS</a>
+        <li>
+          <a class="links-footer" href="#go_about">Quiénes somos</a>
         </li>
-        <li class="list-footer">
-          <a class="links-footer" href="#">CONTACTO</a>
+        <li>
+          <a class="links-footer" href="#">Contacto</a>
         </li>
       </ul>
     </nav>
-    <div class="image-footer">
-      <img src="./assets/images/logo-adalab.png" alt="logo adalab" />
+    <div class="logo-footer">
+      <a href="https://adalab.es/"
+        ><img src="./images/logoadalab.png" alt="logo adalab"
+      /></a>
     </div>
   </div>
 </footer>
