--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -3,105 +3,108 @@
   padding: 0px;
 }
 /* Versión movil */
-/* CONTACTO */
-.contact {
-  width: 7.938rem;
-  height: 2.813rem;
-  margin: 1.875rem auto;
-  font-family: "Rubik", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  text-align: center;
-  line-height: 1.88;
-  letter-spacing: normal;
-  color: #099d8d;
+@media (min-width: 320px) {
+  /* CONTACTO */
+  .contact {
+    width: 7.938rem;
+    height: 2.813rem;
+    margin: 1.875rem auto;
+    font-family: "Rubik", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    text-align: center;
+    line-height: 1.88;
+    letter-spacing: normal;
+    color: #099d8d;
+  }
+  /* Parrafo y small */
+  .container-p {
+    width: 18.125rem;
+    height: 9rem;
+    margin: 0.938rem auto;
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #54585a;
+  }
+  small {
+    font-size: 12px;
+  }
+  /* Asterisco */
+  .text-style-1 {
+    font-size: 12px;
+    color: #14d9c4;
+  }
+  /* Contenedor formulario */
+  .container-formul {
+    display: inline-block;
+    height: 30.625rem;
+    margin-top: 5.25rem;
+  }
+  .label {
+    text-align: left;
+    height: 1.188rem;
+    margin-top: 0.813rem;
+    margin-bottom: 0.438rem;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #54585a;
+  }
+  /* Nombre completo */
+  #firstName {
+    width: 18.125rem;
+    height: 2.813rem;
+    border: solid 1px #b8b8b9;
+  }
+  /* Email y teléfono */
+  .second-part {
+    display: block;
+    text-align: center;
+  }
+  #Email {
+    width: 18.125rem;
+    height: 2.813rem;
+    border: solid 1px #b8b8b9;
+  }
+  .Telephone {
+    padding-left: 0;
+  }
+  #Tel {
+    width: 18.125rem;
+    height: 2.813rem;
+    border: solid 1px #b8b8b9;
+  }
+  /* Mensaje */
+  #Message {
+    width: 18.125rem;
+    height: 6.563rem;
+    border: solid 1px #b8b8b9;
+  }
+  /* Botón */
+  #Button {
+    width: 17.375rem;
+    height: 2.813rem;
+    margin-top: 1.875rem;
+    border-radius: 4px;
+    color: white;
+    background-color: #099d8d;
+  }
+  .Button-green {
+    text-align: center;
+  }
 }
-/* Parrafo y small */
-.container-p {
-  width: 18.125rem;
-  height: 9rem;
-  margin: 0.938rem auto;
-  font-family: "Open Sans";
-  font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  color: #54585a;
-}
-small {
-  font-size: 12px;
-}
-/* Asterisco */
-.text-style-1 {
-  font-size: 12px;
-  color: #14d9c4;
-}
-/* Contenedor formulario */
-.container-formul {
-  display: inline-block;
-  height: 30.625rem;
-  margin-top: 5.25rem;
-}
-.label {
-  text-align: left;
-  height: 1.188rem;
-  margin-top: 0.813rem;
-  margin-bottom: 0.438rem;
-  font-family: "Open Sans";
-  font-size: 14px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #54585a;
-}
-/* Nombre completo */
-#firstName {
-  width: 18.125rem;
-  height: 2.813rem;
-  border: solid 1px #b8b8b9;
-}
-/* Email y teléfono */
-.second-part {
-  display: block;
-  text-align: center;
-}
-#Email {
-  width: 18.125rem;
-  height: 2.813rem;
-  border: solid 1px #b8b8b9;
-}
-.Telephone {
-  padding-left: 0;
-}
-#Tel {
-  width: 18.125rem;
-  height: 2.813rem;
-  border: solid 1px #b8b8b9;
-}
-/* Mensaje */
-#Message {
-  width: 18.125rem;
-  height: 6.563rem;
-  border: solid 1px #b8b8b9;
-}
-/* Botón */
-#Button {
-  width: 17.375rem;
-  height: 2.813rem;
-  margin-top: 1.875rem;
-  border-radius: 4px;
-  color: white;
-  background-color: #099d8d;
-}
-.Button-green {
-  text-align: center;
-}
+
 /* Versión tablet */
 @media all and (min-width: 768px) and (max-width: 1200px) {
   /* Inicio Main */
