--- a/_src/assets/scss/core/_sandw.scss
+++ b/_src/assets/scss/core/_sandw.scss
@@ -16,8 +16,6 @@
   padding: 20px;
   position: relative;
   background-color: rgba(184, 184, 185, 0.8);
-  display: flex;
-  flex-direction: column;
 }
 
 .square {
@@ -34,7 +32,6 @@
 
 .section-2-container-s {
   display: block;
-  position: relative;
 }
 
 .section-2-title {
@@ -55,4 +52,14 @@
   text-align: center;
   color: #54585a;
   overflow: hidden;
+}
+
+.section-2-container-w {
+  display: block;
+}
+
+@media all and (min-width: 768px) {
+}
+
+@media all and (min-width: 1200px) {
 }
