--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -1,3 +1,11 @@
+$primary-font: "Rubik", sans-serif;
+$second-font: "Open Sans";
+$primary-color: #099d8d;
+$second-color: #54585a;
+$third-color: #14d9c4;
+$button-text-color: white;
+$button-background-color: #099d8d;
+$border-color: #b8b8b9;
 * {
   margin: 0px;
   padding: 0px;
@@ -14,7 +22,7 @@
   width: 7.938rem;
   height: 2.813rem;
   margin: 1.875rem auto;
-  font-family: "Rubik", sans-serif;
+  font-family: $primary-font;
   font-size: 1.5rem;
   font-weight: 500;
   font-stretch: normal;
@@ -22,21 +30,21 @@
   text-align: center;
   line-height: 1.88;
   letter-spacing: normal;
-  color: #099d8d;
+  color: $primary-color;
 }
 /* Parrafo y small */
 .container-p {
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
-  font-family: "Open Sans";
+  font-family: $second-font;
   font-size: 16px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: normal;
-  color: #54585a;
+  color: $second-color;
 }
 small {
   font-size: 12px;
@@ -44,7 +52,7 @@ small {
 /* Asterisco */
 .text-style-1 {
   font-size: 12px;
-  color: #14d9c4;
+  color: $third-color;
 }
 /* Contenedor formulario */
 .container-formul {
@@ -57,20 +65,20 @@ small {
   height: 1.188rem;
   margin-top: 0.813rem;
   margin-bottom: 0.438rem;
-  font-family: "Open Sans";
+  font-family: $second-font;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: #54585a;
+  color: $primary-color;
 }
 /* Nombre completo */
 #firstName {
   width: 18.125rem;
   height: 2.813rem;
-  border: solid 1px #b8b8b9;
+  border: solid 1px $border-color;
 }
 /* Email y teléfono */
 .second-part {
@@ -80,7 +88,7 @@ small {
 #Email {
   width: 18.125rem;
   height: 2.813rem;
-  border: solid 1px #b8b8b9;
+  border: solid 1px $border-color;
 }
 .Telephone {
   padding-left: 0;
@@ -88,13 +96,13 @@ small {
 #Tel {
   width: 18.125rem;
   height: 2.813rem;
-  border: solid 1px #b8b8b9;
+  border: solid 1px $border-color;
 }
 /* Mensaje */
 #Message {
   width: 18.125rem;
   height: 6.563rem;
-  border: solid 1px #b8b8b9;
+  border: solid 1px $border-color;
 }
 /* Botón */
 #Button {
@@ -102,8 +110,8 @@ small {
   height: 2.813rem;
   margin-top: 1.875rem;
   border-radius: 4px;
-  color: white;
-  background-color: #099d8d;
+  color: $button-text-color;
+  background-color: $button-background-color;
 }
 .Button-green {
   text-align: center;
@@ -122,7 +130,7 @@ small {
     height: 2.813rem;
     width: 7.938rem;
     margin: 1.875rem auto;
-    font-family: "Rubik", sans-serif;
+    font-family: $primary-font;
     font-size: 1.5rem;
     font-weight: 500;
     font-stretch: normal;
@@ -130,7 +138,7 @@ small {
     text-align: center;
     line-height: 1.88;
     letter-spacing: normal;
-    color: #099d8d;
+    color: $primary-color;
   }
   /* Parrafo y small */
   .container-p {
@@ -152,7 +160,7 @@ small {
   /* Asterisco */
   .text-style-1 {
     font-size: 12px;
-    color: #14d9c4;
+    color: $third-color;
   }
   /* Contenedor formulario */
   .container-formul {
@@ -179,7 +187,7 @@ small {
   #firstName {
     width: 27.625rem;
     height: 2.813rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   /* Email y teléfono */
   .second-part {
@@ -189,7 +197,7 @@ small {
   #Email {
     width: 27.625rem;
     height: 2.813rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   .Telephone {
     padding-left: 0;
@@ -197,13 +205,13 @@ small {
   #Tel {
     width: 27.625rem;
     height: 2.813rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   /* Mensaje */
   #Message {
     width: 27.625rem;
     height: 6.563rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   /* Botón */
   #Button {
@@ -211,8 +219,8 @@ small {
     height: 2.813rem;
     margin-top: 1.875rem;
     border-radius: 4px;
-    color: white;
-    background-color: #099d8d;
+    color: $button-text-color;
+    background-color: $button-background-color;
   }
   .Button-green {
     text-align: right;
@@ -239,7 +247,7 @@ small {
     text-align: center;
     line-height: 1.88;
     letter-spacing: normal;
-    color: #099d8d;
+    color: $primary-color;
   }
   /* Parrafo y small */
   .container-p {
@@ -261,7 +269,7 @@ small {
   /* Asterisco */
   .text-style-1 {
     font-size: 12px;
-    color: #14d9c4;
+    color: $third-color;
   }
   /* Contenedor formulario */
   .container-formul {
@@ -288,7 +296,7 @@ small {
   #firstName {
     width: 37.563rem;
     height: 2.813rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   /* Email y teléfono */
   .second-part {
@@ -298,7 +306,7 @@ small {
   #Email {
     width: 24.688rem;
     height: 2.813rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   .Telephone {
     padding-left: 2.75rem;
@@ -306,13 +314,13 @@ small {
   #Tel {
     width: 10.125rem;
     height: 2.813rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   /* Mensaje */
   #Message {
     width: 37.563rem;
     height: 6.563rem;
-    border: solid 1px #b8b8b9;
+    border: solid 1px $border-color;
   }
   /* Botón */
   #Button {
@@ -320,8 +328,8 @@ small {
     height: 2.813rem;
     margin-top: 1.875rem;
     border-radius: 4px;
-    color: white;
-    background-color: #099d8d;
+    color: $button-text-color;
+    background-color: $button-background-color;
   }
   .Button-green {
     text-align: right;
