--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -4,7 +4,6 @@ $primary-color: #099d8d;
 $second-color: #54585a;
 $third-color: #14d9c4;
 $button-text-color: white;
-$button-background-color: #099d8d;
 $border-color: #b8b8b9;
 * {
   margin: 0px;
@@ -111,7 +110,7 @@ small {
   margin-top: 1.875rem;
   border-radius: 4px;
   color: $button-text-color;
-  background-color: $button-background-color;
+  background-color: $primary-color;
 }
 .Button-green {
   text-align: center;
@@ -145,14 +144,14 @@ small {
     width: 27.625rem;
     height: 7.5rem;
     margin: 0.938rem auto;
-    font-family: "Open Sans";
+    font-family: $second-font;
     font-size: 1rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.5;
     letter-spacing: normal;
-    color: #54585a;
+    color: $second-color;
   }
   small {
     font-size: 12px;
@@ -174,14 +173,14 @@ small {
     text-align: left;
     margin-top: 0.813rem;
     margin-bottom: 0.438rem;
-    font-family: "Open Sans";
+    font-family: $second-font;
     font-size: 14px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
-    color: #54585a;
+    color: $second-color;
   }
   /* Nombre completo */
   #firstName {
@@ -220,7 +219,7 @@ small {
     margin-top: 1.875rem;
     border-radius: 4px;
     color: $button-text-color;
-    background-color: $button-background-color;
+    background-color: $primary-color;
   }
   .Button-green {
     text-align: right;
@@ -239,7 +238,7 @@ small {
     width: 7.938rem;
     height: 2.813rem;
     margin: 1.875rem auto;
-    font-family: "Rubik", sans-serif;
+    font-family: $primary-font;
     font-size: 1.5rem;
     font-weight: 500;
     font-stretch: normal;
@@ -254,14 +253,14 @@ small {
     width: 37.563rem;
     height: 6rem;
     margin: 0.938rem auto;
-    font-family: "Open Sans";
+    font-family: $second-font;
     font-size: 1rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.5;
     letter-spacing: normal;
-    color: #54585a;
+    color: $second-color;
   }
   small {
     font-size: 12px;
@@ -283,14 +282,14 @@ small {
     text-align: left;
     margin-top: 0.813rem;
     margin-bottom: 0.438rem;
-    font-family: "Open Sans";
+    font-family: $second-font;
     font-size: 14px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
-    color: #54585a;
+    color: $second-color;
   }
   /* Nombre completo */
   #firstName {
@@ -329,7 +328,7 @@ small {
     margin-top: 1.875rem;
     border-radius: 4px;
     color: $button-text-color;
-    background-color: $button-background-color;
+    background-color: $primary-color;
   }
   .Button-green {
     text-align: right;
