--- a/_src/assets/scss/core/_go-team.scss
+++ b/_src/assets/scss/core/_go-team.scss
@@ -8,17 +8,17 @@
   text-transform: uppercase;
 }
 
-.go-team {
+/*.go-team {
   position: relative;
-  top: 60px; /*me está afectando el hero y yo me cargaría esta etiqueta y metería distancia con los paddings abajo*/
+  top: 60px; /*me está afectando el hero y yo me cargaría esta etiqueta y metería distancia con los paddings abajo
 }
-
+*/
 .style-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px 15px; /*cambio el margin por padding y debería meter 30px 15px*/
+  padding: 30px 15px; /*cambio el margin por padding y debería meter 30px 15px sin el position del go-team*/
 }
 
 .container-texto {
@@ -39,27 +39,28 @@
 }
 
 @media all and (min-width: 768px) {
-  /*.style-box {
-    padding: 45px 45px 44px 45px;
-  }*/
+  .style-box {
+    padding: 45px 45px 30px 45px;
+  }
 
   .container-equipo {
     width: 678px;
   }
-}
 
-.container-texto {
-  color: #099d8d;
-}
+  .container-texto {
+    color: #099d8d;
+  }
 
-.container-equipo {
-  opacity: 0.67;
+  .container-equipo {
+    opacity: 0.67;
+  }
 }
 
 @media all and (min-width: 1200px) {
-  /*.style-box {
+  .style-box {
     padding-top: 45px;
-  }*/
+    padding-bottom: 60px;
+  }
 }
 
 .container-texto {
