--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -32,7 +32,7 @@ $border-color: #b8b8b9;
   color: $primary-color;
 }
 /* Parrafo y small */
-.container-p {
+.p {
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
@@ -44,14 +44,14 @@ $border-color: #b8b8b9;
   line-height: 1.5;
   letter-spacing: normal;
   color: $second-color;
-}
-small {
-  font-size: 12px;
-}
-/* Asterisco */
-.text-style-1 {
-  font-size: 12px;
-  color: $third-color;
+  &__small {
+    font-size: 12px;
+    /* Asterisco */
+    &--sup {
+      font-size: 12px;
+      color: $third-color;
+    }
+  }
 }
 /* Contenedor formulario */
 .container-formul {
