--- a/_src/templates/partials/_form.html
+++ b/_src/templates/partials/_form.html
@@ -19,7 +19,7 @@
   </div>
   <!-- Inicio del formulario -->
   <div class="container-formul">
-    <form action="/signup" method="POST">
+    <form action="mailto:thecoolcoders3@gmail.com" method="POST">
       <!-- Primera fila -->
       <!-- Nombre completo -->
       <div class="label">
