--- a/_src/templates/partials/_form.html
+++ b/_src/templates/partials/_form.html
@@ -1,5 +1,5 @@
 <!-- Contenedor main -->
-<main class="container-main">
+<main class="main">
   <!-- Contacto -->
   <h1 class="contact">
     CONTACTO
@@ -19,7 +19,7 @@
   </div>
   <!-- Inicio del formulario -->
   <div class="container-formul">
-    <form action="mailto:thecoolcoders3@gmail.com" method="POST">
+    <form action="https://formspree.io/xayjwnkl" method="POST">
       <!-- Primera fila -->
       <!-- Nombre completo -->
       <div class="label">
