--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -11,7 +11,7 @@ $border-color: #b8b8b9;
 }
 /* Versión movil */
 /* Inicio Main */
-.container-main {
+.main {
   width: 100%;
   height: 50.625rem;
   text-align: center;
