--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -1,10 +1,3 @@
-$primary-font: "Rubik", sans-serif;
-$second-font: "Open Sans";
-$primary-color: #099d8d;
-$second-color: #54585a;
-$third-color: #14d9c4;
-$button-text-color: white;
-$border-color: #b8b8b9;
 * {
   margin: 0px;
   padding: 0px;
@@ -140,7 +133,7 @@ $border-color: #b8b8b9;
     color: $primary-color;
   }
   /* Parrafo y small */
-  .container-p {
+  .p {
     width: 27.625rem;
     height: 7.5rem;
     margin: 0.938rem auto;
@@ -152,14 +145,14 @@ $border-color: #b8b8b9;
     line-height: 1.5;
     letter-spacing: normal;
     color: $second-color;
-  }
-  small {
-    font-size: 12px;
-  }
-  /* Asterisco */
-  .text-style-1 {
-    font-size: 12px;
-    color: $third-color;
+    &__small {
+      font-size: 12px;
+      /* Asterisco */
+      &--sup {
+        font-size: 12px;
+        color: $third-color;
+      }
+    }
   }
   /* Contenedor formulario */
   .container-formul {
@@ -249,7 +242,7 @@ $border-color: #b8b8b9;
     color: $primary-color;
   }
   /* Parrafo y small */
-  .container-p {
+  .p {
     width: 37.563rem;
     height: 6rem;
     margin: 0.938rem auto;
@@ -261,14 +254,14 @@ $border-color: #b8b8b9;
     line-height: 1.5;
     letter-spacing: normal;
     color: $second-color;
-  }
-  small {
-    font-size: 12px;
-  }
-  /* Asterisco */
-  .text-style-1 {
-    font-size: 12px;
-    color: $third-color;
+    &__small {
+      font-size: 12px;
+      /* Asterisco */
+      &--sup {
+        font-size: 12px;
+        color: $third-color;
+      }
+    }
   }
   /* Contenedor formulario */
   .container-formul {
