url hero image modified and verified by miguel

--- a/_src/assets/scss/core/_header.scss
+++ b/_src/assets/scss/core/_header.scss
@@ -51,7 +51,7 @@ header {
 }
 
 .hero-image {
-  background: url("../../images/hero-image.jpeg") 50% no-repeat;
+  background: url("../images/hero-image.jpeg") 50% no-repeat;
   background-size: cover;
   height: 421px;
   display: flex;
