--- a/_src/templates/partials/_head.html
+++ b/_src/templates/partials/_head.html
@@ -11,5 +11,5 @@
   href="https://fonts.googleapis.com/css?family=Rubik:500&display=swap"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="./assets/css/core/main.css" />
+<link rel="stylesheet" href="./assets/css/main.css" />
 <title>THE COOL CODERS</title>
