--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,310 +1,3 @@
-body,
-html {
-  margin: 0px;
-  top: 0%;
-  color: rgb(255, 255, 255);
-}
-.style-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 15px;
-  /* background-color: blueviolet; */
-}
-
-.candidate {
-  width: 100%;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 15px;
-  text-align: center;
-}
-
-header {
-  width: 100%;
-  height: 3.75rem;
-  box-sizing: border-box;
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(9, 157, 141, 0.95);
-}
-
-.main-title {
-  height: 30px;
-  font: 1rem "Rubik", "Open Sans", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: rgb(255, 255, 255);
-}
-
-.nav-menu {
-  width: 100%;
-  height: 60px;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  list-style-type: none;
-  background-color: rgba(20, 217, 196, 0.95);
-}
-
-.list a {
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  font: 15px "Rubik", "Open Sans", sans-serif;
-  color: rgb(255, 255, 255);
-}
-
-.go-team {
-  display: block;
-  position: relative;
-  top: 60px;
-}
-
-.go-about {
-  display: flex;
-  height: min-content;
-  position: relative;
-  top: 60px;
-}
-
-.menu {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-
-.hero-image {
-  background: url("../images/hero-image.png") 50% no-repeat;
-  background-size: cover;
-  height: 421px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.hero-text {
-  width: 100%;
-  box-sizing: border-box;
-  margin: 0 15px;
-  padding: 15px;
-  top: 50%;
-  position: relative;
-  color: black;
-  background-color: rgb(255, 255, 255);
-}
-
-.hero-text h2 {
-  font-family: "Rubik", "Open Sans", sans-serif;
-  text-align: center;
-  overflow: hidden;
-}
-
-.container-texto {
-  width: 100%;
-  height: 2.813rem;
-  font: 24px "Rubik", sans-serif;
-  line-height: 1.88;
-  text-align: center;
-  color: rgb(20, 217, 196);
-}
-
-.container-equipo {
-  width: 100%;
-  font-family: "OpenSans", sans-serif;
-  line-height: 1.5;
-  text-align: center;
-  color: #54585a;
-}
-
-.square {
-  width: 30px;
-  height: 30px;
-  border: hidden;
-  margin: initial;
-  background-color: rgb(255, 255, 255);
-  top: 0%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.section-2 {
-  padding: 20px;
-  position: relative;
-  background-color: rgba(184, 184, 185, 0.8);
-  display: flex;
-  flex-direction: column;
-}
-
-.section-2-title {
-  width: 100%;
-  margin: 5px;
-  box-sizing: border-box;
-  font: 22px "Rubik", "sans-serif";
-  line-height: 2.05;
-  text-align: center;
-  color: #099d8d;
-}
-
-.section-2-text {
-  width: 100%;
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
-  line-height: 1.5;
-  text-align: center;
-  color: #54585a;
-  overflow: hidden;
-}
-
-/*main
-.container-principal {
-  margin-top: 60px;
-  width: 100%;
-  height: 200px;
-  background-color: #ffffff;
-}*/
-
-/* CAMBIAR CSS DESDE AQUÍ*/
-
-/*h1*/
-.container-titulo-about {
-  width: 100%;
-  height: 45px;
-  margin: 30px 0px 26px;
-  font-family: Rubik;
-  font-size: 24px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.88;
-  letter-spacing: normal;
-  text-align: center;
-  color: #099d8d;
-}
-/*imagen*/
-.container-imagen-about {
-  text-align: center;
-}
-.imagen-about {
-  width: 180px;
-  height: 180px;
-  border-radius: 4px;
-  border: solid 5px rgba(0, 0, 0, 0.08);
-}
-
-/*nombre*/
-.candidate-info {
-  padding: 0px;
-  margin: 11px 0px 0px;
-  height: 45px;
-  font: 20px "OpenSans";
-  line-height: 2.25;
-  color: #000000;
-}
-/*descripcion*/
-.candidate-description {
-  width: 18.125rem;
-  height: 12.5rem;
-  padding: 0px;
-  margin: 0px;
-  font: "OpenSans";
-  line-height: 1.5;
-  color: #54585a;
-}
-/*iconos*/
-.container-simbolos-about {
-  margin: 15px 0 41px;
-  padding: 0px;
-  list-style: none;
-  color: #099d8d;
-  width: 7.75rem;
-  height: 1.875rem;
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: space-between;
-  list-style-type: none;
-}
-
-/*CAMBIAR CSS HASTA AQUÍ*/
-
-i {
-  color: #099d8d;
-}
-
-.mark {
-  margin: 0;
-  width: 100%;
-  color: rgb(184, 184, 185);
-}
-
-.footer {
-  width: 100%;
-  margin-top: 50px;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.copyright-footer {
-  margin-top: 1.875rem;
-  margin-bottom: 0;
-  color: #b8b8b9;
-  font-size: 0.875rem;
-  text-align: center;
-}
-
-.nav-footer {
-  width: 100%;
-  text-align: center;
-  padding-left: 0px;
-}
-
-.list-footer {
-  margin: 0px;
-  list-style: none;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  text-decoration: none;
-}
-
-ul {
-  padding: 0px;
-}
-
-.image-footer {
-  display: flex;
-  width: 115.9px;
-  height: 45px;
-  text-align: center;
-}
-
-.image-footer img {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 45px;
-}
-
-.links-footer {
-  text-decoration: none;
-  color: #54585a;
-  font-size: 0.875rem;
-  font-family: "Open Sans", sans-serif;
-}
-
-@import "_go-about";
-@import "/core/_form";
+@import "core/_reset";
+@import "core/_go-about";
+@import "core/_form";
