Delete reset styles in go-about mediaqueries

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <partial src="_head.html" label="_head"></partial>
+    <partial src="_head.html" label="_head.scss"></partial>
   </head>
   <body>
-    <partial src="_header.html" label="header"></partial>
-    <partial src="_go-team.html" label="_go-team"></partial>
-    <partial src="_go-about.html" label="_go-about"></partial>
+    <partial src="_header.html" label="_header.scss"></partial>
+    <partial src="_go-team.html" label="go-team"></partial>
+    <partial src="_go-about.html" label="go-about"></partial>
     <partial src="_footer.html" label="footer"></partial>
   </body>
 </html>
