--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -14,7 +14,7 @@
   <section class="hero-image">
     <div class="hero-text">
       <h2>
-        Lo que te hace diferente ahora, te hará destacar más adelante
+        Lo que te hace diferente ahora, te hará destacar más adelante.
       </h2>
     </div>
   </section>
