Add final changes to footer

--- a/_src/assets/scss/core/_footer.scss
+++ b/_src/assets/scss/core/_footer.scss
@@ -7,7 +7,6 @@
 
 .footer {
   margin: 30px 74px 45px;
-  top: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,12 +14,12 @@
   position: relative;
 
   @media all and (min-width: 768px) {
-    margin: 30px 45px 60px;
+    margin: 30px 0px 60px 45px;
     align-items: flex-start;
   }
 
   @media all and (min-width: 1200px) {
-    margin: 30px 138px 51px;
+    margin: 30px 0px 51px 138px;
     align-items: flex-start;
   }
 
@@ -50,9 +49,6 @@
     @media all and (min-width: 768px) {
       margin-top: 0;
     }
-    /*@media all and (min-width: 1200px) {
-      margin-top: 0;
-      }*/
   }
 
   &__logo img {
@@ -68,17 +64,12 @@
 
   @media all and (min-width: 768px) {
     position: absolute;
+    text-align: right;
     right: 45px;
   }
-  @media all and (min-width: 768px) {
+  @media all and (min-width: 1200px) {
     position: absolute;
     right: 138px;
-  }
-
-  &__item {
-    height: 60px;
-    margin: 0;
-    padding: 0px;
   }
 
   &__link {
@@ -93,8 +84,5 @@
     @media all and (min-width: 768px) {
       line-height: 30px;
     }
-    /* @media all and (min-width: 1200px) {
-          line-height: 30px;
-        }*/
   }
 }
