--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -11,12 +11,12 @@
           <a class="footer_nav__link" href="#go_about">Quiénes somos</a>
         </li>
         <li class="footer_nav__list">
-          <a class="footer-nav__link" href="#">Contacto</a>
+          <a class="footer_nav__link" href="./contact.html">Contacto</a>
         </li>
       </ul>
     </nav>
     <div class="footer__logo">
-      <a href="https://adalab.es/"
+      <a href="https://adalab.es/" target="_blank"
         ><img src="./assets/images/logo-adalab.png" alt="logo adalab"
       /></a>
     </div>
