--- a/_src/templates/partials/_header-noclaim.html
+++ b/_src/templates/partials/_header-noclaim.html
@@ -5,8 +5,8 @@
   </header>
   <nav>
     <ul class="nav-menu">
-      <li class="list"><a href="#go_team">EQUIPO</a></li>
-      <li class="list"><a href="#go_about">QUIÉNES SOMOS</a></li>
+      <li class="list"><a href="../index.html#go_team">EQUIPO</a></li>
+      <li class="list"><a href="../index.html#go_about">QUIÉNES SOMOS</a></li>
       <li class="list"><a href="#">CONTACTO</a></li>
     </ul>
   </nav>
