--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -6,7 +6,7 @@
     <ul class="nav-menu">
       <li class="list"><a href="#go_team">EQUIPO</a></li>
       <li class="list"><a href="#go_about">QUIENES SOMOS</a></li>
-      <li class="list"><a href="#">CONTACTO</a></li>
+      <li class="list"><a href="../contact.html">CONTACTO</a></li>
     </ul>
   </nav>
 </div>
