--- a/_src/templates/contact.html
+++ b/_src/templates/contact.html
@@ -14,13 +14,13 @@
       href="https://fonts.googleapis.com/css?family=Rubik:500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/core/main.css" />
+    <link rel="stylesheet" href="./assets/css/main-form.css" />
     <title>THE COOL CODERS</title>
   </head>
 
   <body>
     <partial src="_header-noclaim.html" label="header-noclaim"></partial>
     <partial src="_form.html" label="form"></partial>
-    <partial src="_footer.html" label="footer"></partial>
+    <partial src="_footer-grid.html" label="footer"></partial>
   </body>
 </html>
