--- a/_src/templates/partials/_form.html
+++ b/_src/templates/partials/_form.html
@@ -5,15 +5,15 @@
     CONTACTO
   </h1>
   <!-- Lema -->
-  <div class="p">
+  <div id="go_contact" class="container-p">
     <p>
       Aquí podrás introducir tu teléfono, correo electrónico y tus dudas o
       sugerencias, que nosotras lo leeremos para ponernos en contacto lo antes
       posible.
     </p>
     <br />
-    <small class="p__small">
-      Todos los campos marcados con <sup class="p__small--sup">*</sup> son
+    <small>
+      Todos los campos marcados con <sup class="text-style-1">*</sup> son
       obligatorios.
     </small>
   </div>
