fix contact header

--- a/_src/templates/partials/_header-noclaim.html
+++ b/_src/templates/partials/_header-noclaim.html
@@ -3,7 +3,7 @@
   <header class="header">
     <h1 class="main-title"><a href="./index.html">THE COOL CODERS</a></h1>
   </header>
-  <nav>
+  <nav class="nav">
     <ul class="nav-menu">
       <li class="list"><a href="./index.html#go_team">EQUIPO</a></li>
       <li class="list"><a href="./index.html#go_about">QUIÉNES SOMOS</a></li>
