--- a/_src/templates/partials/_go-about.html
+++ b/_src/templates/partials/_go-about.html
@@ -18,7 +18,7 @@
 
 				<ul class="container-icons-about">
 					<li>
-						<a href="https://twitter.com/Sara_Mgara?s=09" target="_blank">
+						<a href="https://twitter.com/smgaragorri?s=09" target="_blank">
 							<i style="text-decoration: none;" class="fab fa-twitter"></i>
 						</a>
 						</li>
@@ -156,7 +156,7 @@
 						</li>
 					&bull;
 					<li>
-						<a href="#">
+						<a href="https://www.linkedin.com/in/beatrizfleon/">
 							<i class="fab fa-linkedin-in"></i>
 						</a>
 						</li>
