fix footer and rrss links

--- a/_src/templates/partials/_go-about.html
+++ b/_src/templates/partials/_go-about.html
@@ -156,7 +156,7 @@
 						</li>
 					&bull;
 					<li>
-						<a href="https://www.linkedin.com/in/beatrizfleon/">
+						<a href="https://www.linkedin.com/in/beatrizfleon/" target="_blank">
 							<i class="fab fa-linkedin-in"></i>
 						</a>
 						</li>
