--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 <footer>
   <hr class="mark" noshade size="1px" ; />
   <div class="footer">
-    <p class="footer__copy">The cool coders © 2020</p>
+    <small class="footer__copy">The cool coders © 2020</small>
     <nav class="footer_nav">
       <ul class="footer_nav__item">
         <li class="footer_nav__list">
