--- a/_src/templates/partials/_go-about.html
+++ b/_src/templates/partials/_go-about.html
@@ -37,7 +37,7 @@
 						</li>
 					&bull;
 					<li>
-						<a href="#">
+						<a href="mailto:smgaragorri@gmail.com">
 							<i style="text-decoration: none;" class="fas fa-envelope"></i>
 						</a>
 						</li>
