Improve the code and fix little mistakes

--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -1,5 +1,5 @@
 $primary-font: "Rubik", sans-serif;
-$second-font: "Open Sans";
+$secondary-font: "Open Sans";
 $primary-color: #099d8d;
 $second-color: #54585a;
 $third-color: #14d9c4;
