--- a/_src/templates/partials/_form.html
+++ b/_src/templates/partials/_form.html
@@ -77,13 +77,15 @@
       <div class="label">
         <label for="Message"> Mensaje <sup class="text-style-1">*</sup> </label>
       </div>
-      <input
+      <textarea
         placeholder="¿Qué necesitas?"
         id="Message"
         type="text"
         name="Message"
+        cols="80"
+        rows="8"
         required
-      />
+      ></textarea>
       <!-- Botón -->
       <div class="Button-green">
         <input type="submit" id="Button" value="ENVIAR" />
