--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -29,7 +29,7 @@
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
-  font-family: $second-font;
+  font-family: $secondary-font;
   font-size: 16px;
   font-weight: normal;
   font-stretch: normal;
@@ -57,7 +57,7 @@ small {
   height: 1.188rem;
   margin-top: 0.813rem;
   margin-bottom: 0.438rem;
-  font-family: $second-font;
+  font-family: $secondary-font;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -112,44 +112,20 @@ small {
 /* Versión tablet */
 @media all and (min-width: 768px) and (max-width: 1200px) {
   /* Inicio Main */
-  .container-main {
-    width: 100%;
-    height: 50.625rem;
-    text-align: center;
+  .container {
+    &-main {
+      width: 100%;
+      height: 50.625rem;
+      text-align: center;
+    }
   }
-  /* CONTACTO */
-  .contact {
-    height: 2.813rem;
-    width: 7.938rem;
-    margin: 1.875rem auto;
-    font-family: $primary-font;
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    text-align: center;
-    line-height: 1.88;
-    letter-spacing: normal;
-    color: $primary-color;
-  }
-  /* Parrafo y small */
+
   .container-p {
     width: 27.625rem;
     height: 7.5rem;
-    margin: 0.938rem auto;
-    font-family: $second-font;
     font-size: 1rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: $second-color;
   }
-  small {
-    font-size: 12px;
-  }
-  /* Asterisco */
+
   .text-style-1 {
     font-size: 12px;
     color: $third-color;
@@ -166,7 +142,7 @@ small {
     text-align: left;
     margin-top: 0.813rem;
     margin-bottom: 0.438rem;
-    font-family: $second-font;
+    font-family: $secondary-font;
     font-size: 14px;
     font-weight: normal;
     font-stretch: normal;
@@ -246,7 +222,7 @@ small {
     width: 37.563rem;
     height: 6rem;
     margin: 0.938rem auto;
-    font-family: $second-font;
+    font-family: $secondary-font;
     font-size: 1rem;
     font-weight: normal;
     font-stretch: normal;
@@ -275,7 +251,7 @@ small {
     text-align: left;
     margin-top: 0.813rem;
     margin-bottom: 0.438rem;
-    font-family: $second-font;
+    font-family: $secondary-font;
     font-size: 14px;
     font-weight: normal;
     font-stretch: normal;
