--- a/_src/assets/scss/core/_go-about.scss
+++ b/_src/assets/scss/core/_go-about.scss
@@ -28,46 +28,47 @@
   align-items: center;
   margin: 0 15px;
   text-align: center;
-
-  .candidate-info {
+  &-info {
     padding: 0px;
     margin: 11px 0px 0px;
     height: 45px;
-    font: 20px "OpenSans";
+    font-size: 20px;
+    font-family: "Open Sans";
+    font-weight: 400;
     line-height: 2.25;
     color: #000000;
   }
-  .candidate-description {
+  &-description {
     width: 18.125rem;
     padding: 0px;
     margin: 0px;
-    font: "OpenSans";
+    font-family: "Open Sans";
+    font-weight: 400;
     line-height: 1.5;
     color: #54585a;
   }
-
-  .container-icons-about {
-    margin: 15px 0 41px;
-    padding: 0px;
-    list-style: none;
-    color: #099d8d;
-    width: 7.75rem;
-    height: 1.875rem;
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
-    list-style-type: none;
-  }
-  /*CANDIDATE IMAGES*/
-  .image-about {
-    width: 180px;
-    height: 180px;
-    border-radius: 4px;
-    border: solid 5px rgba(0, 0, 0, 0.08);
-  }
-  i {
-    color: #099d8d;
-  }
+}
+.container-icons-about {
+  margin: 15px 0 41px;
+  padding: 0px;
+  list-style: none;
+  color: #099d8d;
+  width: 7.75rem;
+  height: 1.875rem;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style-type: none;
+}
+/*CANDIDATE IMAGES*/
+.image-about {
+  width: 180px;
+  height: 180px;
+  border-radius: 4px;
+  border: solid 5px rgba(0, 0, 0, 0.08);
+}
+i {
+  color: #099d8d;
 }
 
 /* MEDIAQUERY ADALABERS*/
