--- a/_src/assets/scss/core/_go-team.scss
+++ b/_src/assets/scss/core/_go-team.scss
@@ -8,35 +8,30 @@
   text-transform: uppercase;
 }
 
-/*.go-team {
-  position: relative;
-  top: 60px; /*me está afectando el hero y yo me cargaría esta etiqueta y metería distancia con los paddings abajo
-}*/
-
 .style-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 30px 15px;
-  /*cambio el margin por padding y debería meter 30px 15px sin el position del go-team*/
 }
 
-.container-texto {
-  width: 100%;
-  height: 2.813rem;
-  font: 24px "Rubik", sans-serif;
-  line-height: 1.88;
-  text-align: center;
-  color: rgb(20, 217, 196);
-}
-
-.container-equipo {
-  width: 100%;
-  font-family: "OpenSans", sans-serif;
-  line-height: 1.5;
-  text-align: center;
-  color: #54585a;
+.container {
+  &-texto {
+    width: 100%;
+    height: 2.813rem;
+    font: 24px "Rubik", sans-serif;
+    line-height: 1.88;
+    text-align: center;
+    color: rgb(20, 217, 196);
+  }
+  &-equipo {
+    width: 100%;
+    font-family: "OpenSans", sans-serif;
+    line-height: 1.5;
+    text-align: center;
+    color: #54585a;
+  }
 }
 
 @media all and (min-width: 768px) {
