--- a/_src/templates/contact.html
+++ b/_src/templates/contact.html
@@ -14,6 +14,9 @@
       href="https://fonts.googleapis.com/css?family=Rubik:500&display=swap"
       rel="stylesheet"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+    </style>
     <link rel="stylesheet" href="./assets/css/main-form.css" />
     <title>THE COOL CODERS</title>
   </head>
