--- a/_src/assets/scss/main-form.scss
+++ b/_src/assets/scss/main-form.scss
@@ -8,4 +8,4 @@ html {
 @import "core/_variables";
 @import "core/_header";
 @import "core/_form";
-@import "core/_footer-contact";
+@import "core/_contact-footer";
