--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -29,7 +29,7 @@
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
-  font-family: $second-font;
+  font-family: $secondary-font;
   font-size: 1rem;
   font-weight: normal;
   font-stretch: normal;
@@ -57,7 +57,7 @@ small {
   height: 1.188rem;
   margin-top: 0.813rem;
   margin-bottom: 0.438rem;
-  font-family: $second-font;
+  font-family: $secondary-font;
   font-size: 0.875rem;
   font-weight: normal;
   font-stretch: normal;
