--- a/_src/assets/scss/core/_go-team.scss
+++ b/_src/assets/scss/core/_go-team.scss
@@ -8,67 +8,57 @@
   text-transform: uppercase;
 }
 
-/*.go-team {
-  position: relative;
-  top: 60px; /*me está afectando el hero y yo me cargaría esta etiqueta y metería distancia con los paddings abajo
-}*/
-
-.style-box {
+.style-box-team {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 30px 15px;
-  /*cambio el margin por padding y debería meter 30px 15px sin el position del go-team*/
-}
 
-.container-texto {
-  width: 100%;
-  height: 2.813rem;
-  font: 24px "Rubik", sans-serif;
-  line-height: 1.88;
-  text-align: center;
-  color: rgb(20, 217, 196);
-}
+  &-title {
+    width: 100%;
+    height: 2.813rem;
+    font: 24px "Rubik", sans-serif;
+    line-height: 1.88;
+    text-align: center;
+    color: $third-color;
+  }
 
-.container-equipo {
-  width: 100%;
-  font-family: "OpenSans", sans-serif;
-  line-height: 1.5;
-  text-align: center;
-  color: #54585a;
+  &-text {
+    width: 100%;
+    font-family: "OpenSans", sans-serif;
+    line-height: 1.5;
+    text-align: center;
+    color: $second-color;
+  }
 }
-
 @media all and (min-width: 768px) {
-  .style-box {
+  .style-box-team {
     padding: 45px 45px 30px 45px;
-  }
 
-  .container-equipo {
-    width: 678px;
-  }
+    &-text {
+      width: 678px;
+      opacity: 0.67;
+    }
 
-  .container-texto {
-    color: #099d8d;
-  }
-
-  .container-equipo {
-    opacity: 0.67;
+    &-title {
+      color: $primary-color;
+    }
   }
 }
 
 @media all and (min-width: 1200px) {
-  .style-box {
+  .style-box-team {
     padding-top: 45px;
     padding-bottom: 60px;
-  }
 
-  .container-texto {
-    color: #099d8d;
-  }
+    &-title {
+      color: $primary-color;
+    }
 
-  .container-equipo {
-    opacity: 0.67;
-    padding: 15px 0px 60px 0px;
+    &-text {
+      opacity: 0.67;
+      padding: 15px 0px 60px 0px;
+    }
   }
 }
