--- a/_src/assets/scss/main-form.scss
+++ b/_src/assets/scss/main-form.scss
@@ -7,5 +7,5 @@ html {
 
 @import "core/_variables";
 @import "core/_header";
-@import "core/_form";
+@import "core/form";
 @import "core/_contact-footer";
