form completely fixed

--- a/_src/templates/partials/_form.html
+++ b/_src/templates/partials/_form.html
@@ -81,6 +81,7 @@
       </div>
       <textarea
         placeholder="¿Qué necesitas?"
+        class="label"
         id="Message"
         type="text"
         name="Message"
