--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -8,9 +8,10 @@
   width: 100%;
   height: 50.625rem;
   text-align: center;
+  margin-bottom: 50px;
 }
 /* CONTACTO */
-.contact {
+.form-contact {
   width: 7.938rem;
   height: 2.813rem;
   margin: 1.875rem auto;
@@ -25,29 +26,29 @@
   color: $primary-color;
 }
 /* Parrafo y small */
-.p {
+.form-container-text {
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
   font-family: $secondary-font;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: normal;
   color: $second-color;
-  &__small {
-    font-size: 12px;
-    /* Asterisco */
-    &--sup {
-      font-size: 12px;
-      color: $third-color;
-    }
-  }
+}
+small {
+  font-size: 12px;
+}
+/* Asterisco */
+.form-text-style-1 {
+  font-size: 0.75rem;
+  color: $third-color;
 }
 /* Contenedor formulario */
-.container-formul {
+.container-form {
   display: inline-block;
   height: 30.625rem;
   margin-top: 5.25rem;
@@ -58,13 +59,13 @@
   margin-top: 0.813rem;
   margin-bottom: 0.438rem;
   font-family: $secondary-font;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: $primary-color;
+  color: $second-color;
 }
 /* Nombre completo */
 #firstName {
@@ -88,7 +89,7 @@
 #Tel {
   width: 18.125rem;
   height: 2.813rem;
-  border: solid 1px $border-color;
+  border: solid 0.063rem $border-color;
 }
 /* Mensaje */
 #Message {
@@ -101,229 +102,91 @@
   width: 17.375rem;
   height: 2.813rem;
   margin-top: 1.875rem;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   color: $button-text-color;
   background-color: $primary-color;
 }
-.Button-green {
+.form.button {
   text-align: center;
+  margin-bottom: 45px;
 }
 
 /* Versión tablet */
 @media all and (min-width: 768px) and (max-width: 1200px) {
   /* Inicio Main */
   .container-main {
-    width: 100%;
     height: 50.625rem;
-    text-align: center;
-  }
-  /* CONTACTO */
-  .contact {
-    height: 2.813rem;
-    width: 7.938rem;
-    margin: 1.875rem auto;
-    font-family: $primary-font;
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    text-align: center;
-    line-height: 1.88;
-    letter-spacing: normal;
-    color: $primary-color;
   }
   /* Parrafo y small */
-  .p {
+  .form-container-text {
     width: 27.625rem;
     height: 7.5rem;
-    margin: 0.938rem auto;
-    font-family: $secondary-font;
-    font-size: 1rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: $second-color;
-    &__small {
-      font-size: 12px;
-      /* Asterisco */
-      &--sup {
-        font-size: 12px;
-        color: $third-color;
-      }
-    }
-  }
-  /* Contenedor formulario */
-  .container-formul {
-    display: inline-block;
-    height: 30.625rem;
-    margin-top: 5.25rem;
   }
   .label {
     width: 8.188rem;
     height: 1.188rem;
-    text-align: left;
-    margin-top: 0.813rem;
-    margin-bottom: 0.438rem;
-    font-family: $secondary-font;
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: $second-color;
   }
   /* Nombre completo */
   #firstName {
     width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   /* Email y teléfono */
   .second-part {
     display: block;
-    text-align: center;
   }
   #Email {
     width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   .Telephone {
     padding-left: 0;
   }
   #Tel {
     width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   /* Mensaje */
   #Message {
     width: 27.625rem;
-    height: 6.563rem;
-    border: solid 1px $border-color;
   }
-  /* Botón */
-  #Button {
-    width: 12.875rem;
-    height: 2.813rem;
-    margin-top: 1.875rem;
-    border-radius: 4px;
-    color: $button-text-color;
-    background-color: $primary-color;
-  }
-  .Button-green {
+  .form-button {
     text-align: right;
   }
 }
-
 @media (min-width: 1200px) {
   /* Inicio Main */
   .container-main {
-    width: 100%;
     height: 47.063rem;
-    text-align: center;
-  }
-  /* CONTACTO */
-  .contact {
-    width: 7.938rem;
-    height: 2.813rem;
-    margin: 1.875rem auto;
-    font-family: $primary-font;
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    text-align: center;
-    line-height: 1.88;
-    letter-spacing: normal;
-    color: $primary-color;
   }
   /* Parrafo y small */
-  .p {
+  .form-container-text {
     width: 37.563rem;
     height: 6rem;
-    margin: 0.938rem auto;
-    font-family: $secondary-font;
-    font-size: 1rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: $second-color;
-    &__small {
-      font-size: 12px;
-      /* Asterisco */
-      &--sup {
-        font-size: 12px;
-        color: $third-color;
-      }
-    }
-  }
-  /* Contenedor formulario */
-  .container-formul {
-    display: inline-block;
-    height: 30.625rem;
-    margin-top: 5.25rem;
   }
   .label {
     width: 8.188rem;
     height: 1.188rem;
-    text-align: left;
-    margin-top: 0.813rem;
-    margin-bottom: 0.438rem;
-    font-family: $secondary-font;
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: $second-color;
   }
   /* Nombre completo */
   #firstName {
     width: 37.563rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   /* Email y teléfono */
   .second-part {
     display: flex;
-    text-align: center;
   }
   #Email {
     width: 24.688rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   .Telephone {
     padding-left: 2.75rem;
   }
   #Tel {
     width: 10.125rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   /* Mensaje */
   #Message {
     width: 37.563rem;
-    height: 6.563rem;
-    border: solid 1px $border-color;
   }
-  /* Botón */
-  #Button {
-    width: 17.375rem;
-    height: 2.813rem;
-    margin-top: 1.875rem;
-    border-radius: 4px;
-    color: $button-text-color;
-    background-color: $primary-color;
-  }
-  .Button-green {
+  .form-button {
     text-align: right;
   }
 }
