Add style changes to footer

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -16,9 +16,7 @@
       </ul>
     </nav>
     <div class="footer__logo">
-      <a href="https://adalab.es/" target="_blank"
-        ><img src="./assets/images/logo-adalab.png" alt="logo adalab"
-      /></a>
+      <a href="https://adalab.es/" target="_blank"><img src="./assets/images/logo-adalab.png" alt="logo adalab"/></a>
     </div>
   </div>
 </footer>
