--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -4,6 +4,7 @@ html {
   top: 0%;
   color: rgb(255, 255, 255);
 }
+@import "core/_variables";
 @import "core/_settings";
 @import "core/_header";
 @import "core/_go-team";
